Fixed overlapping divs

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,6 @@ h4 {
 }
 
 #referralhistory {
-  height: 100vh;
   display: flex;
   align-items: center;
 }
